<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.leagueofshadows.abhyas.AdminPortal">
    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:title="@string/logout"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_refresh"
        android:title="@string/refresh"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_refresh_black_48dp"
        android:visible="true" />
    <item
        android:id="@+id/action_add"
        android:title="@string/refresh"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_menu_share"
        android:visible="true" />
</menu>